# fastchaos

./: Cargo.toml  LICENSE  README.md  homo.icgr  paper.bib  paper.md  tt  tt.tt
.github/workflows/: cd.yml  ci.yml  release.yml
src/: app.rs  bicgr.rs  cgr.rs  cli.rs  error.rs  icgr.rs  main.rs  utils.rs
tests/: homo_sapiens_mitochondrion.fa  path.txt  reads.out  reads_1.fa  reads_1.fa.bz2  reads_1.fa.xz  test.cgr.bz2  test.cgr.xz
