[package]
name        = "fastchaos"
version     = "0.1.0"
authors     = ["Anicet Ebou <anicet.ebou@gmail.com>"]
edition     = "2021"
description = "fastchaos encode, decode and analyze DNA sequence using integer Chaos Game Representation" 
homepage    = "https://github.com/Ebedthan/fastchaos"
readme      = "README.md"
license     = "MIT"
categories  = ["command-line-utilities"]
keywords    = ["bioinformatics", "DNA encoding", "chaos game representation"] 


[dependencies]
anyhow     = "1.0.40"
atty = "0.2.14"
clap       = { version = "4.2.4", features = ["cargo"] }
dssim-core = "3.2.1"
exitcode   = "1.1.2"
imgref     = "1.9.1"
itertools  = "0.10.3"
load_image = "2.16.2"
lodepng    = "3.6.1"
noodles    = { version = "0.22.0", features = ["fasta"] }
plotters   = "0.3.1"
rayon      = "1.7"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
zstd       = "0.11"

[profile.release]
opt-level       = 3
debug           = true
overflow-checks = false
lto             = 'thin'
panic           = 'abort'
incremental     = false

[[bin]]
name  = "fastchaos"
path  = "src/main.rs"
bench = false
