[package]
name        = "fastchaos"
version     = "0.1.0"
authors     = ["Anicet Ebou <anicet.ebou@gmail.com>"]
edition     = "2021"
description = "fastchaos encode, decode and analyze DNA sequence using integer Chaos Game Representation" 
homepage    = "https://github.com/Ebedthan/fastchaos"
readme      = "README.md"
license     = "MIT"
categories  = ["command-line-utilities"]
keywords    = ["bioinformatics", "DNA encoding", "chaos game representation"] 


[dependencies]
anyhow     = "1"
clap       = { version = "4.5.4", features = ["cargo"] }
dssim-core = "3.2"
imgref     = "1.10"
itertools  = "0.12"
load_image = "3.1"
lodepng    = "3.10"
noodles    = { version = "0.22.0", features = ["fasta"] }
plotters   = "0.3"
rayon      = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile   = "3"
zstd       = "0.13"

[profile.release]
opt-level       = 3
debug           = true
overflow-checks = false
lto             = 'thin'
panic           = 'abort'
incremental     = false

[[bin]]
name  = "fastchaos"
path  = "src/main.rs"
bench = false
